...
                                'Descrição',
                                style: TextStyle(fontWeight: FontWeight.bold),
                              ),
                            ),
                            DataColumn(
                              label: Text(
                                'Gerar',
                                style: TextStyle(fontWeight: FontWeight.bold),
                              ),
                            ),
                          ],
                          rows: <DataRow>[
                            _buildDataRow(
                              'Movimentações',
                              'Entradas, saídas e transferências',
                              _generateMovimentacoesReport,
                            ),
                            _buildDataRow(
                              'Itens Críticos',
                              'Materiais com baixo estoque',
                              _generateCriticalItemsReport,
...
