...
                                                          FontWeight.bold,
                                                    ),
                                                  ),
                                                ],
                                              ),
                                              Text(
                                                  "Localização: ${_itemDetalhe!['localizacao']}"),
                                            ],
                                          ),
                                        ),
                                      ],
                                    ),
                                  ),
...
