...
              padding: EdgeInsets.symmetric(
                  horizontal: horizontalPadding, vertical: verticalPadding),
              child: Column(
                crossAxisAlignment: CrossAxisAlignment.start,
                children: [
                  Text(
                    'Cadastro de Materiais', 
                    style: TextStyle(
                        fontSize: isMobile ? 28 : 30, 
                        fontWeight: FontWeight.w800, 
                        color: const Color(0xFF082583)),
                  ),
                  const SizedBox(height: 32),
...
